--- a/hugo.toml
+++ b/hugo.toml
@@ -50,6 +50,15 @@ enableRobotsTXT = true
   #  pre = "<span data-feather='code'></span>"
 
   [[menu.main]]
+    identifier = "linkedin"
+
+    url = "https://www.linkedin.com/in/fernando-fernandez-soto"
+    weight = 3
+    # We use feather-icons: https://feathericons.com/
+    pre = "<span data-feather='linkedin'></span>"
+
+
+  [[menu.main]]
     identifier = "email"
 
     url = "mailto:fernando.andeca@gmail.com"
