--- a/hugo.toml
+++ b/hugo.toml
@@ -9,6 +9,8 @@ theme = "gokarna"
 # Automatically generate robots.txt
 enableRobotsTXT = true
 
+enableEmoji = true
+
 [menu]
   [[menu.main]]
     # Unique identifier for a menu item
